# HW_2_12

./: README.md  pyproject.toml
src/: alembic.ini  database.py  main.py
src/auth/: repository.py  routes.py  schemas.py  services.py
src/contacts/: exceptions.py  models.py  repositories.py  routes.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 285af21604e3_init.py  296cc68855df_init.py  4dde4702773b_init.py
src/users/: routes.py  services.py
temp/: alembic.ini  main.py  pyproject.toml
users/: repository.py  routes.py  schemas.py
